# createGPT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: crc.h  gpt.h  guid.h  linked_list.h  mbr.h
src/: gpt.c  guid.c  linked_list.c  main.c
